# ignis-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/ignis/: main.cpp
include/ignis/detail/: core_dependent.hxx  debug_assert.hxx  depth_manger.hxx  double_command_buffer.hxx  enable_sync.hxx  glfw_context.hxx  glfw_dependent.hxx  hints.hxx  include_glfw.hxx  include_vulkan_allocator.hxx  memory_selector.hxx  resource_allocator.hxx  resource_memory.hxx  scheduler.hxx  swapchain.hxx  swapchain_manager.hxx  sync_mocks.hxx  sync_tools.hxx  transfer_manager.hxx  transparent_hash.hxx  vulkan_functional.hxx
include/ignis/graphics/: buffer.hxx  core.hxx  image.hxx  render_pass.hxx  shader.hxx  window.hxx
include/ignis/input/: axis.hxx  event.hxx  map.hxx
